<?xml version="1.0" encoding="utf-8"?>
<!--TODO 14: Crear el diseño del registro de usuario-->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrarActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <ImageView
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/upc"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:id="@+id/img_logo"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_logo"
            android:text = "@string/datos_registro"
            android:textSize="22sp"
            android:layout_marginTop="20sp"
            android:textAlignment="center"
            android:textColor="@color/rojo"
            android:id="@+id/txv_registro"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_below="@+id/txv_registro"
            android:hint="@string/correo_registro"
            android:padding="5dp"
            android:textAlignment="center"
            android:background="@drawable/forma_edit"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="10dp"
            android:id="@+id/edt_correo_nuevo"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_below="@+id/edt_correo_nuevo"
            android:hint="@string/nombre_registro"
            android:background="@drawable/forma_edit"
            android:padding="5dp"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="10dp"
            android:id="@+id/edt_nombre_nuevo"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_below="@+id/edt_nombre_nuevo"
            android:hint="@string/apellido_registro"
            android:background="@drawable/forma_edit"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:textAlignment="center"
            android:paddingHorizontal="10dp"
            android:id="@+id/edt_apellido_nuevo"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_below="@+id/edt_apellido_nuevo"
            android:hint="@string/carrera_registro"
            android:padding="5dp"
            android:textAlignment="center"
            android:background="@drawable/forma_edit"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="10dp"
            android:id="@+id/edt_carrera_nuevo"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_below="@+id/edt_carrera_nuevo"
            android:hint="@string/codigo_registro"
            android:background="@drawable/forma_edit"
            android:padding="5dp"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="10dp"
            android:id="@+id/edt_codigo_nuevo"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spi_cargo"
            android:layout_marginTop="20dp"
            android:layout_below="@id/edt_codigo_nuevo"
            android:entries="@array/cargo"
            android:background="@drawable/forma_spinner"
            android:padding="5dp"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:layout_marginHorizontal="40dp"
            />
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spi_campus"
            android:layout_marginTop="20dp"
            android:layout_below="@id/spi_cargo"
            android:entries="@array/campus"
            android:padding="5dp"

            android:background="@drawable/forma_spinner"
            android:layout_centerHorizontal="true"
            android:dropDownWidth="wrap_content"
            android:spinnerMode="dropdown"
            android:layout_marginHorizontal="40dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_below="@+id/spi_campus"
            android:inputType="textPassword"
            android:paddingHorizontal="10dp"
            android:hint="@string/clave_registro"
            android:background="@drawable/forma_edit"
            android:padding="5dp"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:id="@+id/edt_clave_nuevo"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_below="@+id/edt_clave_nuevo"
            android:hint="@string/claverep_registro"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:paddingHorizontal="10dp"
            android:padding="5dp"
            android:textAlignment="center"
            android:background="@drawable/forma_edit"
            android:id="@+id/edt_claverep_nuevo"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:text="@string/registrar_nuevo"
            android:layout_marginTop="20dp"
            android:layout_below="@id/edt_claverep_nuevo"
            android:textColor="@color/black"
            android:id="@+id/btn_registrar_nuevo"
            android:textSize="22sp"
            app:backgroundTint="@null"
            android:background="@drawable/forma_boton"
            />
        <ProgressBar
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_centerInParent="true"
            android:id="@+id/pgb_espera_registro"
            android:visibility="gone"/>
    </RelativeLayout>
</ScrollView>